--- a/app/assets/stylesheets/welcome.css
+++ b/app/assets/stylesheets/welcome.css
@@ -172,7 +172,7 @@ img {
 }
 #header {
   width: 100%;
-  background-image: url('banner.jpg');
+  background-image: url('banner123.jpg');
   background-position: center -200px;
   background-repeat: no-repeat;
 }
