--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -1,25 +1,55 @@
 <div class="form">
-<%if flash.any?%>
-  <%flash.each do |key, error|%>
-    <p><%=error%></p>
-  <%end%>
-<%end%>
+
 
 <%= form_for(resource, :as => resource_name, :url => session_path(resource_name)) do |f| %>
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+  <div class="divtable">
+    <div class="divrow">
+      <div class="divcell left">
+      </div>
+      <div class="divcell right">
+        <%if flash.any?%>
+  <%flash.each do |key, error|%>
+    <p style="color: red;"><%=error%></p>
+  <%end%>
+<%end%>
+      </div>
+    </div>
 
-  <div><%= f.label :password %><br />
-  <%= f.password_field :password %></div>
+    <div class="divrow">
+      <div class="divcell left">
+        <span class="fieldname"><%= f.label :email %></span>
+        <span class="fielddesc">Enter your email</span>
+      </div>
+      <div class="divcell right">
+        <%= f.email_field :email, :autofocus => true, :class => "textbox" %>
+      </div>
+    </div>
 
-  <% if devise_mapping.rememberable? -%>
-    <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
-  <% end -%>
+    <div class="divrow">
+      <div class="divcell left">
+        <span class="fieldname"><%= f.label :password %></span>
+        <span class="fielddesc">Enter your password</span>
+      </div>
+      <div class="divcell right">
+        <%= f.password_field :password, :class => "textbox" %>
+      </div>
+    </div>
 
-  <div><%= f.submit "Sign in" %></div>
+    <div class="divrow">
+      <div class="divcell left">
+      </div>
+      <div class="divcell right">
+        <% if devise_mapping.rememberable? -%>
+          <div><%= f.check_box :remember_me %> <%= f.label :remember_me %></div>
+        <% end -%>
+      </div>
+    </div>
+  </div>
+
+  <div style="text-align: center; padding: 10px 0px 0px;">
+    <%=f.submit "Sign in", :class =>"button"%>
+  </div>
+
 <% end %>
 
-<%= render "devise/shared/links"%>
-
 </div>
-<%=debug resource%>
